added media queries

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
         </div>
 
 
+
       </div>
       <!-- main chart -->
       <div class="main-chart chart">
@@ -209,7 +210,7 @@
 
       <div class="recent-reviews">
         <div>
-          <h5>Recent Activity</h5>
+          <h5>Recent Reviews</h5>
         </div>
 
         <div class="reviews">
