fixed image src

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
         <div class="sales">
           <div>
-            <img src="/images/member-1.jpg" alt="Jessica Jones">
+            <img src="images/member-1.jpg" alt="Jessica Jones">
           </div>
           <div>
             <h4>Jessica Jones</h4>
@@ -178,7 +178,7 @@
         </div>
         <div class="sales">
           <div>
-            <img src="/images/member-2.jpg" alt="Tony Stark">
+            <img src="images/member-2.jpg" alt="Tony Stark">
           </div>
           <div>
             <h4>Tony Stark</h4>
@@ -188,7 +188,7 @@
         </div>
         <div class="sales">
           <div>
-            <img src="/images/member-3.jpg" alt="Carol Danvers">
+            <img src="images/member-3.jpg" alt="Carol Danvers">
           </div>
           <div>
             <h4>Carol Danvers</h4>
@@ -198,7 +198,7 @@
         </div>
         <div class="sales">
           <div>
-            <img src="/images/member-4.jpg" alt="Stephen Strange">
+            <img src="images/member-4.jpg" alt="Stephen Strange">
           </div>
           <div>
             <h4>Stephen Strange</h4>
@@ -215,7 +215,7 @@
 
         <div class="reviews">
           <div>
-            <img src="/images/member-1.jpg" alt="Jessica Jones">
+            <img src="images/member-1.jpg" alt="Jessica Jones">
           </div>
           <div>
             <h4>Jessica Jones</h4>
@@ -225,7 +225,7 @@
         </div>
         <div class="reviews">
           <div>
-            <img src="/images/member-2.jpg" alt="Tony Stark">
+            <img src="images/member-2.jpg" alt="Tony Stark">
           </div>
           <div>
             <h4>Tony Stark</h4>
@@ -235,7 +235,7 @@
         </div>
         <div class="reviews">
           <div>
-            <img src="/images/member-3.jpg" alt="Carol Danvers">
+            <img src="images/member-3.jpg" alt="Carol Danvers">
           </div>
           <div>
             <h4>Carol Danvers</h4>
@@ -245,7 +245,7 @@
         </div>
         <div class="reviews">
           <div>
-            <img src="/images/member-4.jpg" alt="Stephen Strange">
+            <img src="images/member-4.jpg" alt="Stephen Strange">
           </div>
           <div>
             <h4>Stephen Strange</h4>
