fixed errors from validators

--- a/index.html
+++ b/index.html
@@ -284,14 +284,14 @@
         </div>
         <form>
           <div class='switch-div'>
-            <label for="switch">Send Email Notifications</label>
+            <label for="email">Send Email Notifications</label>
             <label class="switch">
               <input type="checkbox" id="email">
               <span class="slider round">ON<span>OFF</span></span>
             </label>
           </div>
           <div class='switch-div'>
-            <label for="switch">Set Profile to Public</label>
+            <label for="profile">Set Profile to Public</label>
             <label class="switch">
               <input type="checkbox" id="profile">
               <span class="slider round">ON<span>OFF</span></span>
@@ -351,7 +351,7 @@
   </div>
 
 
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
   <script src="js/script.js"></script>
 </body>
 
